--- a/home.css
+++ b/home.css
@@ -44,6 +44,17 @@ h3 {
  margin-bottom: 0rem;
 }
 
+.fancy{
+  padding-right: 0.5em;
+  text-indent: -0.7rem;
+  font-size: 25px;
+  color: CornflowerBlue;
+  font-weight: bold;
+  text-shadow: -4px 2px 7px #504747;
+  font-style: italic;
+  font-family: sans-serif;
+}
+
 h4 {
  font-size: 1.1rem;
  font-weight: bold;
@@ -126,13 +137,13 @@ table.RM td {
 .right {
   text-align: right;
 }
-ol {
+
+.fl {
   margin-left: 0;
   padding-left: 1em;
-  counter-reset: ol-item
 }
 
-ol > li {
+.fl li {
   margin-left: 0;
   padding-left: 1em;
   list-style-type: none;
@@ -140,11 +151,11 @@ ol > li {
   display: table-row;
 }
 
-ol li:before {
+.fl li:before {
   display: table-cell;
   content: counter(ol-item) "     ";
   padding-right: 0.5em;
-  text-indent: -0.7rem;
+  text-indent: -0.3rem;
   font-size: 25px;
   color: CornflowerBlue;
   font-weight: bold;
@@ -158,13 +169,10 @@ ol li:before {
   list-style-position: outside;
 }
 
-
 @media print
 {
  .breakit { page-break-before: always; }
 }
-
-.dummyinc {  counter-increment: page; }
 
 @media print
 {
