--- a/home.css
+++ b/home.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@300;400&display=swap');
 
-html{ font-size: 20px;}
+html{ font-size: 19px;}
 
 body {
  font-family: 'Noto Serif KR', serif;
@@ -14,6 +14,18 @@ body {
  margin-right:3em
 }
 
+
+.simple {
+ background-color: #d8f2e9;
+ border: none;
+ line-height: 1.5rem;
+ font-size: 1rem;
+ overflow-x: hidden;
+ padding: 5px 5px 5px 1rem;
+ margin: 1.5rem 1rem 1.5rem 1rem;
+ border-radius: 10px;
+ margin: 5px 5px 5px 0px;
+}
 
 
 A:link { color:  #000084; }
@@ -65,7 +77,7 @@ h4 {
 p {
   display: block;
   margin-top: 1em;
-  margin-bottom: 2em;
+  margin-bottom: 0.5em;
   margin-left: 0;
   margin-right: 0;
 }
@@ -186,7 +198,7 @@ table.RM td {
 .pheader {
     page-break-before: always;
     font-size: 0.8em;
-    text-align: right;
+    text-align: center;
     counter-increment: page;
 }
-div.pheader:after { content: "       Page  " counter(page); font-weight: bold; }
+div.pheader:after { content: " -- page  " counter(page); font-weight: bold; }
