--- a/home.css
+++ b/home.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@300;400&display=swap');
 
-html{ font-size: 19px;}
+html{ font-size: 18px;}
 
 body {
  font-family: 'Noto Serif KR', serif;
@@ -10,7 +10,7 @@ body {
  padding-bottom: 10px;
  background-color: white;
  padding: 30px;
- width: 48rem;
+ width: 50rem;
  margin-right:3em
 }
 
@@ -150,12 +150,12 @@ table.RM td {
   text-align: right;
 }
 
-.fl {
+ol.fl {
   margin-left: 0;
   padding-left: 1em;
 }
 
-.fl li {
+ol.fl li {
   margin-left: 0;
   padding-left: 1em;
   list-style-type: none;
@@ -163,7 +163,7 @@ table.RM td {
   display: table-row;
 }
 
-.fl li:before {
+ol.fl li:before {
   display: table-cell;
   content: counter(ol-item) "     ";
   padding-right: 0.5em;
@@ -174,6 +174,22 @@ table.RM td {
   text-shadow: -4px 2px 7px #504747;
   font-style: italic;
   font-family: sans-serif;
+}
+
+ol.fl ul { counter-reset: ul-item; line-height: 1.5}
+ol.fl ul li {counter-increment: ul-item; }
+ol.fl ul li::before{
+  margin:0;
+  padding-right: 0em;
+  padding-left:0;
+  margin-left:0;
+  text-indent:0;
+  display:contents;
+  font-weight:normal;
+  text-decoration: none;
+  text-shadow: none;
+  color:black;
+  content: "- ";
 }
 
 .bulb {
