--- a/home.css
+++ b/home.css
@@ -4,13 +4,13 @@ html{ font-size: 18px;}
 
 body {
  font-family: 'Noto Serif KR', serif;
- font-size: 1rem;
+ font-size: 1em;
  line-height: 1.8;
  padding-top: 10px;
  padding-bottom: 10px;
  background-color: white;
  padding: 30px;
- width: 50rem;
+ width: 50em;
  margin-right:3em
 }
 
@@ -18,11 +18,11 @@ body {
 .simple {
  background-color: #d8f2e9;
  border: none;
- line-height: 1.5rem;
- font-size: 1rem;
+ line-height: 1.5em;
+ font-size: 1em;
  overflow-x: hidden;
- padding: 5px 5px 5px 1rem;
- margin: 1.5rem 1rem 1.5rem 1rem;
+ padding: 5px 5px 5px 1em;
+ margin: 1.5em 1em 1.5em 1em;
  border-radius: 10px;
  margin: 5px 5px 5px 0px;
 }
@@ -36,29 +36,29 @@ A:hover { color: #AAAAAA; }
 A.bare { text-decoration: none; border-style: none; }
 
 h1 {
-  font-size: 2rem;
+  font-size: 2em;
   font-weight: bold;
   border-bottom-style: solid;
 }
 
 h2 {
- font-size: 1.3rem;
+ font-size: 1.3em;
  font-weight: bold;
  border-bottom: 1px solid #cccccc;
- margin-top: 3rem;
- margin-bottom: 0.2rem;
+ margin-top: 3em;
+ margin-bottom: 0.2em;
 }
 
 h3 {
- font-size: 1.1rem;
+ font-size: 1.1em;
  font-style: italic;
- margin-top: 0.5rem;
- margin-bottom: 0rem;
+ margin-top: 0.5em;
+ margin-bottom: 0em;
 }
 
 .fancy{
   padding-right: 0.5em;
-  text-indent: -0.7rem;
+  text-indent: -0.7em;
   font-size: 25px;
   color: CornflowerBlue;
   font-weight: bold;
@@ -68,10 +68,10 @@ h3 {
 }
 
 h4 {
- font-size: 1.1rem;
+ font-size: 1.1em;
  font-weight: bold;
- margin-top: 0.5rem;
- margin-bottom: 0rem;
+ margin-top: 0.5em;
+ margin-bottom: 0em;
 }
 
 p {
@@ -83,13 +83,13 @@ p {
 }
 
 pre {
-  font-size: 15px; 
+  font-size: 0.8em;
 }
 
 
 table {
-  padding: 1rem;
-  font-size:1rem;
+  padding: 1em;
+  font-size:1em;
   border-collapse: collapse;
 }
 
@@ -138,7 +138,7 @@ table.RM td {
   border-collapse:collapse;
   border-width:4pt;
   border-color: #000084;
-  font-size: 1.5rem;
+  font-size: 1.5em;
   padding: 10px 10px 10px 10px;
 }
 
@@ -168,7 +168,7 @@ ol.fl li:before {
   display: table-cell;
   content: counter(ol-item) "     ";
   padding-right: 0.5em;
-  text-indent: -0.3rem;
+  text-indent: -0.3em;
   font-size: 25px;
   color: CornflowerBlue;
   font-weight: bold;
