--- a/home.css
+++ b/home.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@300;400&display=swap');
 
 html{
-  font-size: 1em; 
+  font-size: min(max(10px, 1.5vw), 22px);
 }
 
 body {
@@ -13,8 +13,7 @@ body {
  padding: 30px;
  margin-right:3em;
  font-size:1em;
- max-width: 54em;
- min-width: 54em;
+ width: 60em;
 }
 
 
