--- a/home.css
+++ b/home.css
@@ -85,9 +85,14 @@ p {
 }
 
 pre {
-  font-size: 0.9vw;
+  font-size: 1em;
 }
 
+@media screen and (max-width: 480px) {
+  pre {
+    width:50% !important;
+  }
+}
 
 table {
   padding: 1em;
